Migrate stock market index view to use the new crud manager ui.

--- a/templates/stock_market/index.html.twig
+++ b/templates/stock_market/index.html.twig
@@ -1,20 +1,21 @@
-{% extends 'Components/Layout/crud-manage.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
+
+    {% include 'Components/ui/crud-manage-css.html.twig' %}
 
     <link rel="stylesheet" href="{{ asset('build/stock_market_form.css') }}">
 {%  endblock %}
 
 {% block page_content %}
-    {{ parent() }}
+    {% include 'Components/ui/crud-manage-table.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
 
-    <!-- select2 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+    {% include 'Components/ui/crud-manage-scripts.html.twig' %}
 
     <script src="{{ asset('build/stock_market_form.js') }}"></script>
 
@@ -36,18 +37,34 @@
                 }
             };
 
+            // Create page instance
+            let $crudManagerRowBox = $('.{{ js_crud_manage_class|default('js-crud-manage-row-box') }}');
+
+            let contentWrapper = $crudManagerRowBox.closest('section');
+            let entityType = $crudManagerRowBox.data('entity-type');
+
+            // Create CRUDManage instance @see public/assets/js/CRUDManage.js
+            let crudManager = new CRUDManage({
+                entityType: entityType,
+                wrapper: contentWrapper,
+                swalFormOptions: window.swalFormOptions,
+                swalConfirmOptions: window.swalConfirmOptions,
+                toastOptions: window.toastOptions,
+                pagination: true,
+            });
+
             const form = new StockMarketForm(swalFormOptionsText);
 
-            window.crudManager.withForm(form);
+            crudManager.withForm(form);
             // add button create
-            window.crudManager.withCreateButton();
+            crudManager.withCreateButton();
             // add button edit
-            window.crudManager.withViewButton();
-            window.crudManager.withEditButton();
+            crudManager.withViewButton();
+            crudManager.withEditButton();
             // add button delete
-            window.crudManager.withDeleteButton();
+            crudManager.withDeleteButton();
 
-            window.crudManager.render();
+            crudManager.render();
         });
     </script>
 {% endblock %}
