Migrate broker index view to use the new crud manager ui.

--- a/templates/brokers/index.html.twig
+++ b/templates/brokers/index.html.twig
@@ -1,17 +1,21 @@
-{% extends 'Components/Layout/crud-manage.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
+
+    {% include 'Components/ui/crud-manage-css.html.twig' %}
 
     <link rel="stylesheet" href="{{ asset('build/broker_form.css') }}">
 {%  endblock %}
 
 {% block page_content %}
-    {{ parent() }}
+    {% include 'Components/ui/crud-manage-table.html.twig' %}
 {% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
+
+    {% include 'Components/ui/crud-manage-scripts.html.twig' %}
 
     <script src="{{ asset('build/broker_form.js') }}"></script>
 
@@ -33,14 +37,30 @@
                 }
             };
 
+            // Create page instance
+            let $crudManagerRowBox = $('.{{ js_crud_manage_class|default('js-crud-manage-row-box') }}');
+
+            let contentWrapper = $crudManagerRowBox.closest('section');
+            let entityType = $crudManagerRowBox.data('entity-type');
+
+            // Create CRUDManage instance @see public/assets/js/CRUDManage.js
+            let crudManager = new CRUDManage({
+                entityType: entityType,
+                wrapper: contentWrapper,
+                swalFormOptions: window.swalFormOptions,
+                swalConfirmOptions: window.swalConfirmOptions,
+                toastOptions: window.toastOptions,
+                pagination: true,
+            });
+
             const form = new BrokerForm(swalFormOptionsText);
 
-            window.crudManager.withForm(form);
-            window.crudManager.withCreateButton();
-            window.crudManager.withEditButton();
-            window.crudManager.withDeleteButton();
+            crudManager.withForm(form);
+            crudManager.withCreateButton();
+            crudManager.withEditButton();
+            crudManager.withDeleteButton();
 
-            window.crudManager.render();
+            crudManager.render();
         });
     </script>
 
