--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -97,7 +97,7 @@
             };
 
             // add button view
-            crudManager.withViewButton(swalViewOptions, '#js-view-template');
+            crudManager.withViewButton('.js-entity-view', swalViewOptions, '#js-view-template');
             // add button edit
             crudManager.withEditButton();
             // add button delete
