--- a/templates/brokers/stocks.html.twig
+++ b/templates/brokers/stocks.html.twig
@@ -26,7 +26,7 @@
                         <i class="fa-plus-circle fa" aria-hidden="true"></i>
                         {{ create_button_label }}
                     </button>
-                    <select id="brokerStock" name="brokerStock" required="required" style="width: 30%; margin-right: 10px;"
+                    <select id="brokerStock" name="stock" required="required" style="width: 30%; margin-right: 10px;"
                             class="js-broker-stock-autocomplete form-control pull-right"
                             data-autocomplete-url="{{ path('stock_list') }}">
                         <option value="" selected="selected">Choose an stock</option>
@@ -38,11 +38,11 @@
     <script>
         $(document).ready(function() {
             let swalFormOptionsText = {
-                create: {
-                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was added successfully.'|trans }}'
+                add: {
+                    toastTitleText: '{{ 'Stock was added to the broker successfully.'|trans }}'
                 },
                 delete: {
-                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was removed successfully.'|trans }}'
+                    toastTitleText: '{{ 'Stock was removed from the broker successfully.'|trans }}'
                 }
             };
 
@@ -66,7 +66,7 @@
 
             crudManager.withForm(form);
             // add button create
-            crudManager.withCreateButton('.js-add-stock-create');
+            crudManager.withCreateButton('.js-add-stock-create', form.addStock);
             // add button delete
             crudManager.withDeleteButton();
 
@@ -99,6 +99,10 @@
                         break;
                     case 'delete':
                         route = Routing.generate(entityType + '_delete', param);
+
+                        break;
+                    case 'add':
+                        route = Routing.generate(entityType + '_add', param);
 
                         break;
                     default:
