Remove stock to the broker.

--- a/templates/brokers/stocks.html.twig
+++ b/templates/brokers/stocks.html.twig
@@ -98,6 +98,10 @@
 
                         break;
                     case 'delete':
+                        if (id) {
+                            param['stockId'] = id;
+                        }
+
                         route = Routing.generate(entityType + '_delete', param);
 
                         break;
