Add wallet finances properties.
- Added properties dividend, commissions, connection, interest.
- Updated api entity.
- Updated dashboard view.
- Added migration.

--- a/templates/wallets/head-dashboard.html.twig
+++ b/templates/wallets/head-dashboard.html.twig
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Dividends'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.invested }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.dividend }}</span>
                     </div>
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Benefits'|trans }}</span>
@@ -68,18 +68,18 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Commissions'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.commissions }}</span>
                     </div>
                     <div class="col-xs-6">
                         <span class="info-box-text">{{ 'Interest'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.capital }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.interest }}</span>
                     </div>
                 </div>
                 <div class="row separator"></div>
                 <div class="row">
                     <div class="col-xs-6 pull-right">
                         <span class="info-box-text">{{ 'Connection'|trans }}</span>
-                        <span class="info-box-number"><small>&euro;</small> {{ wallet.funds }}</span>
+                        <span class="info-box-number"><small>&euro;</small> {{ wallet.connection }}</span>
                     </div>
                 </div>
             </div>
