Add columns to operation in dashboard.

--- a/templates/Components/Macros/crud-manage-render.html.twig
+++ b/templates/Components/Macros/crud-manage-render.html.twig
@@ -44,7 +44,7 @@
 
 {% macro render_percentage(value) %}
     <% if ({{ value }} !== null && {{ value }} !== 0) { %>
-        <%= {{ value }} %><small>%</small>
+        <%= {{ value }}.toFixed(2).toString().replace(/\./g, ",") %><small>%</small>
     <% } %>
 {% endmacro render_percentage %}
 
