--- a/templates/wallets/dashboard.html.twig
+++ b/templates/wallets/dashboard.html.twig
@@ -14,12 +14,32 @@
 
     {% include 'wallets/head-dashboard.html.twig' %}
 
-    {% embed 'Components/ui/crud-manage-table.html.twig' with {
-        'entity_name': operation_entity_name,
-        'fields': wallet_items_fields,
-        'js_crud_manage_class': 'js-operation-crud-manage-row-box'
-    }%}
-    {% endembed %}
+<div class="row">
+    <div class="col-md-12">
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">{{ 'Operations'|trans }}</h3>
+
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                    </button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+                {% embed 'Components/ui/crud-manage-table.html.twig' with {
+                    'entity_name': operation_entity_name,
+                    'fields': wallet_items_fields,
+                    'js_crud_manage_class': 'js-operation-crud-manage-row-box',
+                    'border': 0
+                }%}
+                {% endembed %}
+            </div>
+            <!-- /.box-body -->
+        </div>
+    </div>
+</div>
 
 {% endblock %}
 
